@@ -4,6 +4,8 @@
 	* common.c (cob_sys_fork): bug #451 reset cob_process_id after fork
 	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
 	  user-specified CPPFLAGS to override own includes, see bug #452
+	* common.c: minimal support for DJGGP,
+	  including generation of 8.3 filenames
 
 2017-10-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
